--- a/index.html
+++ b/index.html
@@ -4,7 +4,34 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Salmon Cookies</title>
+
+    <link rel="stylesheet" href="style.css" />
   </head>
 
-  <body></body>
+  <body>
+    <header>
+      <img class="logo" src="./images/salmon.png" alt="" />
+      <nav>
+        <ul class="navLinks">
+          <li><a href="./sales.html">Home</a></li>
+          <li><a href="./sales.html"> Contact</a></li>
+        </ul>
+      </nav>
+      <a class="sales" href="./sales.html"><button>Sales</button></a>
+    </header>
+    <main>
+      <h1>Salmon Cookies</h1>
+      <h3>Dive into Delight: Salmon Cookies - Where Seafood Meets Sweet!</h3>
+      <p>
+        🍪 Welcome to our Salmon Sweetery, where fish and dessert do the tango
+        in your taste buds' favorite dance party! 🎣🎉 Brace yourself for the
+        oceanic joyride – our Salmon Cookies are here to prove that the best
+        catch of the day might just be in your snack stash! Dive in, crunch on,
+        and get ready for a sea of giggles with every delicious bite. Because
+        who said cookies can't swim upstream to flavor fame? Let the laughter
+        and the salmon-infused sweetness begin! 🌊🍪 #CookiesGoneWild
+      </p>
+    </main>
+    <footer></footer>
+  </body>
 </html>
