--- a/index.html
+++ b/index.html
@@ -20,18 +20,26 @@
       <a class="sales" href="./sales.html"><button>Sales</button></a>
     </header>
     <main>
-      <h1>Salmon Cookies</h1>
-      <h3>Dive into Delight: Salmon Cookies - Where Seafood Meets Sweet!</h3>
-      <p>
-        🍪 Welcome to our Salmon Sweetery, where fish and dessert do the tango
-        in your taste buds' favorite dance party! 🎣🎉 Brace yourself for the
-        oceanic joyride – our Salmon Cookies are here to prove that the best
-        catch of the day might just be in your snack stash! Dive in, crunch on,
-        and get ready for a sea of giggles with every delicious bite. Because
-        who said cookies can't swim upstream to flavor fame? Let the laughter
-        and the salmon-infused sweetness begin! 🌊🍪 #CookiesGoneWild
-      </p>
+      <section>
+        <h1 class="">Salmon Cookies</h1>
+        <h3>Dive into Delight: Salmon Cookies - Where Seafood Meets Sweet!</h3>
+      </section>
+      <article>
+        <p>
+          Welcome to our Salmon Sweetery, where fish and dessert do the tango in
+          your taste buds' favorite dance party! Brace yourself for the oceanic
+          joyride - our Salmon Cookies are here to prove that the best catch of
+          the day might just be in your snack stash! Dive in, crunch on, and get
+          ready for a sea of giggles with every delicious bite. Because who said
+          cookies can't swim upstream to flavor fame? Let the laughter and the
+          salmon-infused sweetness begin! #CookiesGoneWild
+          <img class="cookie" src="./images/cookie1.png" alt="" />
+        </p>
+      </article>
     </main>
-    <footer></footer>
+    <footer>
+      <p>Delicious &copy 2023. All Rights Reserved.</p>
+      <p>Proudly published with Ghost.</p>
+    </footer>
   </body>
 </html>
