--- a/sales.html
+++ b/sales.html
@@ -10,12 +10,33 @@
   </head>
 
   <body>
-    <img class="logo" src="./images/salmon.png" alt="Logo" />
-    <h1>Salmon Cookie Sales</h1>
+    <header>
+      <img class="logo" src="./images/salmon.png" alt="" />
+      <nav>
+        <ul class="navLinks">
+          <li>
+            <a href="https://jonathanalbertcross.github.io/cookie-standTwo/"
+              >Home</a
+            >
+          </li>
+          <li><a href="./sales.html"> Contact</a></li>
+        </ul>
+      </nav>
+      <a class="sales" href="./sales.html"><button>Sales</button></a>
+    </header>
+    <main>
+      <section>
+        <h1 class="">Salmon Cookies Sales</h1>
+        <h3>
+          Got a new location? Awesome! Use the form to add it to the table
+          below!
+        </h3>
+      </section>
+    </main>
 
     <form action="" id="newShop">
       <fieldset>
-        <legend>Cookie Sales Data</legend>
+        <legend></legend>
         <label for="Location">Location</label>
         <input name="Location" type="text" id="location" />
         <label for="minCust">Minimum customers per hour</label>
