--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
     <main>
       <section>
-        <h1 class="">Salmon Cookies</h1>
+        <h1>Salmon Cookies</h1>
         <h3>Dive into Delight: Salmon Cookies - Where Seafood Meets Sweet!</h3>
       </section>
       <article>
