--- a/sales.html
+++ b/sales.html
@@ -26,7 +26,7 @@
     </header>
     <main>
       <section>
-        <h1 class="">Salmon Cookies Sales</h1>
+        <h1>Salmon Cookies Sales</h1>
         <h3>
           Got a new location? Awesome! Use the form to add it to the table
           below!
@@ -36,7 +36,6 @@
 
     <form action="" id="newShop">
       <fieldset>
-        <legend></legend>
         <label for="Location">Location</label>
         <input name="Location" type="text" id="location" />
         <label for="minCust">Minimum customers per hour</label>
